roles/servers/files/10.32.10.27/iptables
# Generated by iptables-save v1.3.5 on Mon Apr  1 15:17:09 2013
*filter
:INPUT DROP [72:5616]
:FORWARD DROP [0:0]
:OUTPUT DROP [44:4912]
:LOGGING - [0:0]

#default policy for input
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p udp -m state --state ESTABLISHED,RELATED -j ACCEPT

# Allow incoming and outgoing ssh
-A INPUT -p tcp -s 10.32.16.64/26 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -s 10.32.5.0/24 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -s 10.32.16.180 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -s 10.32.16.179 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -s 10.32.100.25 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -s 10.32.16.179 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -s 10.32.10.32 --dport 22 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp --dport 22 -m state --state NEW -j ACCEPT

#Allow incoming/outgoing ICMP
-A INPUT -p icmp -m limit --limit 2/min --limit-burst 5 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p icmp -m state --state NEW,ESTABLISHED -j ACCEPT

# Allow Input monit From ops Vlan
-A INPUT -p tcp -s 10.32.5.0/24 --dport 2812 -m state --state NEW -j ACCEPT

#Allow incoming/outgoing HTTP/S access 
-A INPUT -p tcp --dport 80 -m state --state NEW -j ACCEPT
-A INPUT -p tcp --dport 443 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp --dport 8080 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp --dport 8443 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp --dport 80 -m state --state NEW -j ACCEPT

#Allow connection to DB and Queue server
-A OUTPUT -p tcp --dport 3306 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -d 10.32.10.7 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -d 10.32.100.7 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -d 10.32.100.8 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -d 10.32.10.200 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -d 10.32.10.8 -m state --state NEW -j ACCEPT

#Allow incoming SNMP request
-A INPUT -p udp -s 10.32.16.180 --dport 161 -m state --state NEW -j ACCEPT
-A INPUT -p udp -s 10.32.16.179 --dport 161 -m state --state NEW -j ACCEPT

#Allow access repo server
-A OUTPUT -p tcp -d 10.32.15.190 --dport 80 -m state --state NEW -j ACCEPT

#Allow access DNS server and NTP and SYSLOG-NG, samhain
-A OUTPUT -p udp -d 10.32.10.53 --dport 53 -m state --state NEW -j ACCEPT
-A OUTPUT -p udp -d 10.32.10.52 --dport 53 -m state --state NEW -j ACCEPT
-A OUTPUT -p udp -d 10.32.10.53 --dport 123 -m state --state NEW -j ACCEPT
#-A OUTPUT -p tcp -d 10.32.100.25 --dport 11 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -d syslog.1rstwap.com --dport 11 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -d 10.32.100.25 --dport 49777 -m state --state NEW -j ACCEPT

#Allow access Singasari SMTP and POP
-A INPUT -p tcp -s 10.32.10.32 --dport 43 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -d 10.32.10.11 --dport 25 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -d 10.32.10.11 --dport 995 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -d 10.32.10.10 --dport 110 -m state --state NEW -j ACCEPT
# Stunnel
-A OUTPUT -p tcp -d 10.32.10.26 --dport 110 -m state --state NEW -j ACCEPT

#default policy for output
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p tcp -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m state --state ESTABLISHED -j ACCEPT

#default policy for LOGGING 
-A INPUT -j LOGGING
-A LOGGING -j LOG --log-prefix "IPTables Packet Dropped: " --log-level 7
-A LOGGING -j DROP

COMMIT
# Completed on Mon Apr  1 15:17:09 2013
